--- a/source/examples/FIR_design_verb.tex
+++ b/source/examples/FIR_design_verb.tex
@@ -53,7 +53,7 @@ Let's first define functions to plot filter properties.
 \begin{verbatim}
 from pylab import *
 import scipy.signal as signal
-
+    
 #Plot frequency and phase response
 def mfreqz(b,a=1):
     w,h = signal.freqz(b,a)
@@ -109,20 +109,29 @@ figures/code chunk.
 
 
 \begin{verbatim}
->>> n = 61
->>> a = signal.firwin(n, cutoff = 0.3, window = "hamming")
->>> #Frequency and phase response
->>> mfreqz(a)
->>> show()
->>> #Impulse and step response
->>> figure(2)
-<matplotlib.figure.Figure object at 0x7f3d7131c610>
->>> impz(a)
->>> show()
-
+n = 61
+a = signal.firwin(n, cutoff = 0.3, window = "hamming")
+#Frequency and phase response
+mfreqz(a)
 \end{verbatim}
 \includegraphics[width= \linewidth]{figures/FIR_design_verb_figure2_1.pdf}
-\includegraphics[width= \linewidth]{figures/FIR_design_verb_figure2_2.pdf}
+
+\begin{verbatim}
+show()
+#Impulse and step response
+figure(2)
+\end{verbatim}
+\begin{verbatim}
+<matplotlib.figure.Figure at 0x7fb05cd7f6a0>
+\end{verbatim}
+\begin{verbatim}
+<matplotlib.figure.Figure at 0x7fb05cd7f6a0>
+\end{verbatim}
+
+\begin{verbatim}
+impz(a)
+\end{verbatim}
+\includegraphics[width= \linewidth]{figures/FIR_design_verb_figure2_1.pdf}
 
 
 \subsection{Highpass FIR Filter}
@@ -132,8 +141,7 @@ Let's define a highpass FIR filter:
 
 \begin{verbatim}
 n = 101
-a = signal.firwin(n, cutoff = 0.3, window = "hanning",
-pass_zero=False)
+a = signal.firwin(n, cutoff = 0.3, window = "hanning", pass_zero=False)
 mfreqz(a)
 show()
 \end{verbatim}
@@ -148,8 +156,7 @@ Notice that the plot has a caption defined in code chunk options.
 
 \begin{verbatim}
 n = 1001
-a = signal.firwin(n, cutoff = [0.2, 0.5], window = 'blackmanharris',
-pass_zero = False)
+a = signal.firwin(n, cutoff = [0.2, 0.5], window = 'blackmanharris', pass_zero = False)
 mfreqz(a)
 show()
 \end{verbatim}
